Change to scales_to_zero to avoid high cardinality